tests/regression/issue77/test.smt2
(set-logic QF_LIA)
(declare-fun a () Int )
(declare-fun b () Bool )
(assert (let ( (c (ite b 1.0 2.0))) (= 0 (* 2 c))))
(check-sat )
